--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         Number:
 		<input type="text" id="n1">
 		<p>
-			<button onclick="cube()"> x^3 </button>
+			<button onclick="cube()"> x^3     </button>
 			<button onclick="power_4()"> x^4  </button>
+			<button onclick="sine()"> sin     </button>
 		</p>
 		<script type="text/javascript">
 			function cube() {
@@ -21,6 +22,10 @@
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 4);
 			}
+			function sine() {
+				var num = document.getElementById("n1");
+				num.value = Math.sin(num.value);
+			 }
 		</script>
    	</body>
 </html>
