--- a/index.html
+++ b/index.html
@@ -6,26 +6,22 @@
 	</head>
 	<body>
 		<h1>Calculadora de Jose Membrives</h1>
-        Number:
+		Number:
 		<input type="text" id="n1">
 		<p>
-			<button onclick="cube()"> x^3     </button>
-			<button onclick="power_4()"> x^4  </button>
-			<button onclick="sine()"> sin     </button>
+			<button onclick="square()"> x^2 </button>
+			<button onclick="cube()"> x^3 </button>
+	
 		</p>
 		<script type="text/javascript">
 			function cube() {
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 3);
 			}
-    		function power_4() {
+			function square() {
 				var num = document.getElementById("n1");
-				num.value = Math.pow(num.value, 4);
+				num.value = Math.pow(num.value, 2);
 			}
-			function sine() {
-				var num = document.getElementById("n1");
-				num.value = Math.sin(num.value);
-			 }
 		</script>
-   	</body>
+	</body>
 </html>
