--- a/index.html
+++ b/index.html
@@ -3,25 +3,41 @@
 	<head>
 		<title>Calculator</title>
 		<meta charset="utf-8">
+    </head>
 	</head>
 	<body>
 		<h1>Calculadora de Jose Membrives</h1>
 		Number:
 		<input type="text" id="n1">
 		<p>
-			<button onclick="square()"> x^2 </button>
-			<button onclick="cube()"> x^3 </button>
-	
+			<button onclick="inverse()"> 1/x  </button>
+			<button onclick="square()"> x^2   </button>
+			<button onclick="cube()"> x^3     </button>
+			<button onclick="power_4()"> x^4  </button>
+			<button onclick="sine()"> sin    </button>
 		</p>
 		<script type="text/javascript">
 			function cube() {
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 3);
 			}
-			function square() {
+			function power_4() {
+				var num = document.getElementById("n1");
+				num.value = Math.pow(num.value, 4);
+			}
+   		    function sine() {
+				var num = document.getElementById("n1");
+				num.value = Math.sin(num.value);
+			 }
+			function inverse() {
+				var num = document.getElementById("n1");
+				num.value = 1/num.value;
+			}
+            function square() {
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 2);
 			}
 		</script>
+</body>
 	</body>
-</html>
+</html> 
